java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testIncorrectType58119a-hints.pass
Create Field c in org.netbeans.test.java.hints.IncorrectType58119a
Create Parameter c
Create Local Variable c
